# cliai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPROVEMENTS_SUMMARY.md  LICENSE  PKGBUILD  README.md  config.example.toml  config.json  docker-compose.yml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
.kiro/specs/cliai-reliability-improvements/: design.md  requirements.md  tasks.md
docs/: .gitkeep  ARCHITECTURE.md  CLOUD_SETUP.md  CONFIGURATION.md  DISTRIBUTION.md  INSTALLATION.md  index.md
packaging/chocolatey/: cliai.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/homebrew/: cliai.rb
scripts/: build.sh  cliai_comprehensive_test.sh  test_performance.py
src/: api_keys.rs  builtin_commands.rs  config.rs  context.rs  error_handling.rs  execution.rs  history.rs  intent.rs  lib.rs  logging.rs  main.rs  os_context.rs  performance.rs  providers.rs  quoting.rs  test_suite.rs  validation.rs
src/agents/: mod.rs  profiles.rs
tests/scenarios/: real_world_50.json
website/: README.md  docusaurus.config.ts  sidebars.ts
website/docs/: architecture.md  configuration.md  distribution.md  installation.md  intro.md  license.md  safety.md  troubleshooting.md  usage.md
website/src/components/HomepageFeatures/: index.tsx
website/src/pages/: index.module.css  index.tsx
